--- a/views/galeria.html
+++ b/views/galeria.html
@@ -51,7 +51,7 @@
         </div>
         <!--foto3-->
          <div class="item animate__animated animate__fadeInDown animate__slower">
-            <img class="foto" src="../img/galeria/arbol1.jpg" alt="">
+            <img class="foto" src="../img/galeria/arbol1.jpg" alt="arbol de finca">
         </div>
         <!--foto4-->
         <div class="item animate__animated animate__fadeInRight animate__slower">
@@ -87,7 +87,7 @@
         </div>       
          <!--foto12-->
         <div class="item">
-            <img class="foto" src="../img/galeria/pistachos-mano.jpg" alt="">
+            <img class="foto" src="../img/galeria/pistachos-mano.jpg" alt="puñado de pistahcos">
         </div>
         </div>
     </main>
