--- a/views/miel.html
+++ b/views/miel.html
@@ -38,7 +38,7 @@
      <h1>Miel</h1>
      <main class="producto">
         <div class="containerImg">
-            <img src="../img/miel-tienda.jpg" class="rounded-start" alt="Pistachos">
+            <img src="../img/miel-tienda.jpg" class="rounded-start" alt="Miel">
         </div>
         <div class="containerData">
             <div class="containerInfo">
