--- a/views/oliva.html
+++ b/views/oliva.html
@@ -38,7 +38,7 @@
          <h1>Aceite de oliva</h1>
      <main class="producto">
         <div class="containerImg">
-            <img src="../img/oliva-producto.jpg" class="rounded-start" alt="Pistachos">
+            <img src="../img/oliva-producto.jpg" class="rounded-start" alt="aceite de oliva">
         </div>
         <div class="containerData">
             <div class="containerInfo">
