--- a/views/pasas.html
+++ b/views/pasas.html
@@ -38,7 +38,7 @@
      <h1>Pasas</h1>
      <main class="producto">
         <div class="containerImg">
-            <img src="../img/pasas-producto.jpg" class="rounded-start" alt="Pistachos">
+            <img src="../img/pasas-producto.jpg" class="rounded-start" alt="Pasas">
         </div>
         <div class="containerData">
             <div class="containerInfo">
