--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,25 +1,24 @@
 .containerForm{
+    @include dflex (flex, space-around, stretch);
     height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    width: map-get($map: $anchos, $key: w-100);
     align-items: center;
-    justify-content: space-around;
+    flex-direction: column;
         .formulario{
             display: flex;
             align-items: center;
             justify-content: space-around;
-            border: 3px solid #fff;
-            background-color: #424632;
-            border-radius: 10px;
+            border: 3px solid map-get($map: $colores, $key:textColor );
+            background-color: map-get($map: $colores, $key: linea);
+            border-radius: 3px;
             flex-direction: column;
             flex-wrap: wrap;
-            width: 80%;
-            height:70%;
+            width: map-get($map: $anchos, $key: w-80);
+            height:50%;
             text-align: center;
                 label{
                     font-weight: bolder;
-                    color: #fff;
+                    color: map-get($map: $colores, $key: textColor );
                         &:hover{
                             text-decoration: underline;
                         }
@@ -27,20 +26,20 @@
                 input, textarea{
                      display: inline;
                     text-align: center;
-                    width: 50%;
+                    width: map-get($map: $anchos, $key: w-50);
                     font-weight: bolder;
-                    color: #000;
-                    background-color: #fff;
+                    color: map-get($map: $colores, $key: darktext);
+                    background-color: map-get($map: $colores,$key:textColor );
                     max-height: 200px;
                 }
                 .formImg{
-                    width: 10%;
+                    width: map-get($map: $anchos, $key: w-10);
                     display: flex;
                     text-align: center;
                 }
         }
         iframe{
             display: flex;
-            width: 80%;
+            width: map-get($map: $anchos, $key: w-80);
         }
 }
