--- a/scss/_error404.scss
+++ b/scss/_error404.scss
@@ -5,21 +5,22 @@
     justify-content: center;
     background-image: url(../img/fondoerror404.jpg);
     height: 100vh;
-    object-fit: contain;
+    object-fit: cover;
         .error{
             display: flex;
             flex-direction: column;
-            width: 80%;
-            font-size: 3em;
+            width: map-get($map: $anchos, $key: w-80);      
+            border-radius: 5px;
+            font-size: 2.3em;
                 p{
                     background-color: rgba(50, 50, 50, .8);
                     text-align: center;
                 }
                 a{
-                    color: #fff;
+                    color: map-get($map: $colores, $key:textColor );
                     text-align: center;
                     font-weight: bolder;
-                    background-color: rgba(20, 20, 20, );
+                    background-color: map-get($map: $colores, $key: darktext );
                 }
         }
 }
