--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,18 +4,17 @@ footer{
     justify-content: center;
     align-items: center;
     text-align: center;
-
-    background-color: #111;
+    background-color:map-get($map: $colores, $key:darkbg);
         a{
             text-decoration: none;
             i{
                 padding: 20px;
                 margin: 5px;
-                color: #999;
+                color: map-get($map: $colores, $key: cardstxt );
                     &:hover{
-                        color: #fff;
+                        color: map-get($map: $colores, $key: textColor );
                         transition: all .6s;
-                        transform: scale(1.3);
+                        transform: scale(1.2);
                     }
             }
         }
