--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -11,8 +11,7 @@
             border: 5px #232 solid;
 
                 .foto{
-                    width: 100%;
-                    height: 100%;
+                    @include wh-100;
                     object-fit: cover;
                         &:hover{
                             filter: grayscale(100%);
