--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 .header-index{
-    width: 100%;
+    width: map-get($map: $anchos, $key: w-100);
     height:95vh;
     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)),url(../img/fondo-header.png);
     background-attachment: fixed;
@@ -30,11 +30,11 @@ nav{
                 padding: 0.5em;
                 align-items: center;
                     a{
-                        color: #fff;
+                        color: map-get($map: $colores, $key:textColor);
                         text-decoration: none;
                         font-weight: bold;
                             &:hover{
-                                color: #2a4;
+                                color: map-get($map: $colores, $key: navHover);
                                 transition: .5s;
                             }
                     }
