--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -18,8 +18,7 @@
         width: 600px;
         }
         .producto .containerData{
-        width: 50%;
-        background: color #222421;;
+        width: map-get($map: $anchos, $key:w-50 );
         justify-content: center;
         height: min-content;
         align-content: center;
@@ -68,7 +67,7 @@
         //ALIMENTOS
 @media (max-width: 768px){
     .alimento{
-        width: 85%;
+        width: map-get($map: $anchos, $key: w-80);
         height: 100%;
         display: flex;
         justify-content: center;
@@ -86,18 +85,18 @@
     }
     .infoAlimento{
         justify-content: center;
-        width: 100%;
+        width: map-get($map: $anchos, $key: w-100);
         text-align: center;
         .information{
-            width: 100%;
+            width: map-get($map: $anchos, $key: w-100);
         }
     }
     .product-image{
-        width: 100%;
+        width: map-get($map: $anchos, $key: w-100);
         height: 85%;
         img{
             height: 85%;
-            width: 100%;
+            width: map-get($map: $anchos, $key: w-100);
 
         }
     }
