--- a/views/gracias.html
+++ b/views/gracias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Finca Don Juan</title>
     <link rel="shortcut icon" href="img/logopng.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
