--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -22,7 +22,7 @@
             <nav>
                 <div class="logo">
                     <a href="../index.html">
-                        <img src="../img/logoblanco.svg" alt="Don Juan Alimentos naturales">
+                        <img src="../img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
                 <ul>
