todo testeado hasta en 320px, SEO listo(sin keywords),  sass (faltan algunos mixin), falta optimizar imagenes

--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -20,12 +20,12 @@
                                           <!--start header-->
        <div class="header">
             <nav>
-                <div class="logo">
+                <div class="logo mb-2">
                     <a href="../index.html">
                         <img src="../img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
-                <ul>
+                <ul class="ps-1 mb-0">
                     <li><a href="alimentos.html">Alimentos</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
