--- a/views/registrarse.html
+++ b/views/registrarse.html
@@ -30,7 +30,7 @@
                         <img src="../img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
-                <ul>
+                <ul  class="ps-1 mb-0">
                     <li><a href="alimentos.html">Productos</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
