--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -20,14 +20,14 @@ nav{
     display: flex;
     text-align: center;
     align-items:center;
-    margin: auto;
-    padding: 1.5% 5% 0% 5%;
         ul{
+          display: flex;
+          justify-content: center;
             li{
                 list-style: none;
+                padding: 0;
                 display: flex;
                 display: inline-block;
-                padding: 0.5em;
                 align-items: center;
                     a{
                         color: map-get($map: $colores, $key:textColor);
@@ -40,11 +40,4 @@ nav{
                     }
             }
         }
-}
-                        //parche para header responsive
-@media (max-width: 500px){
-    ul{
-        display: flex; 
-        flex-direction: column;
-    }
 }
