--- a/views/gracias.html
+++ b/views/gracias.html
@@ -25,18 +25,15 @@
                   <!--start header-->
        <div class="header">
             <nav>
-                <div class="logo">
+                <div class="logo mb-2">
                     <a href="../index.html">
                         <img src="../img/logoblanco.png" alt="Don Juan Alimentos naturales">
                     </a>
                 </div>
-                <ul>
-                    <li><a href="tienda.html">Tienda</a></li>
-                    <li><a href="alimentos.html">Productos</a></li>
+                <ul  class="ps-1 mb-0">
+                    <li><a href="alimentos.html">Alimentos</a></li>
                     <li><a href="galeria.html">Galeria</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="iniciar.html">Iniciar sesión</a></li>
-                    <li><a href="registrarse.html">Registrarse</a></li>
                 </ul>
             </nav>
                   <!--ends header-->
